finished re-writing repos, working on liquibase and config file with test